# project-lint

./: .envrc  .gitignore  AGENTS.md  Cargo.toml  PROJECT_SUMMARY.md  README.md  build.sh  demo-pnpm-hook.sh  devbox.json  devbox.json.backup  flake.nix  justfile
.config/project-lint/: config.toml
docs/: configuration.md  development-setup.md  git-hooks-cicd.md  hook-installation.md  hook-logging.md  pnpm-enforcement.md
docs-internal/: adr-rules-recommendations.md  config-file-rules.md  configuration-architecture.md  implementation-summary.md  security-analysis.md  typescript-linting.md
docs-internal/requirements/: 20250804initial-project-lint-requirements.md  20251219-remaining-work.md
docs/lint-categories/: ast.md  file-naming.md  git.md  package-organization.md  runtime-guards.md  security.md  typescript.md
examples/: basic-config.toml  rust-project.toml
internal-docs/adr/: adr-20251219001-nix-direnv-dev-environment.md
src/: ast.rs  config.rs  config_extended_tests.rs  config_validation.rs  dependency_checker.rs  dependency_version_checker.md  dependency_version_checker.rs  detection.rs  file_naming.rs  file_naming_tests.rs  git.rs  lib.rs  main.rs  markdown_frontmatter.rs  package_organization.rs  pnpm_lockfile.rs  profiles.rs  runtime_guards.rs  security.rs  typescript.rs  utils.rs
src/commands/: configure.rs  configure_cmd.rs  git_hooks_tests.rs  hook.rs  init.rs  install_hook.rs  install_hook_tests.rs  lint.rs  logs.rs  mod.rs  watch.rs
src/hooks/: engine.rs  engine_tests.rs  logger.rs  logger_tests.rs  (+1 more)
tests/: config_tests.rs  integration_tests.rs
(+47 files in other folders)
